Add plotting.py and modify the convention of log directory

--- a/notebooks/2022-04-29-Understanding_EpochLogger.ipynb
+++ b/notebooks/2022-04-29-Understanding_EpochLogger.ipynb
@@ -24,28 +24,30 @@
     "class EpochLogger:\n",
     "    \"\"\"\n",
     "    Minimal version of spinningup's EpochLogger.\n",
-    "    \n",
+    "\n",
     "    References:\n",
     "        https://github.com/openai/spinningup/blob/master/spinup/utils/logx.py\n",
     "        https://github.com/kakaoenterprise/JORLDY/blob/master/jorldy/manager/log_manager.py\n",
     "    \"\"\"\n",
-    "    def __init__(self, run_id=None):\n",
+    "    def __init__(self, output_dir=None, run_id=None):\n",
     "        \"\"\"\n",
     "        Args:\n",
-    "            run_id (string): The name of an experiment. If ``None``, \n",
-    "                , defaults to a random number.\n",
+    "            output_dir (string): A directory for saving results to. If ``None``, defaults to a temp directory of the \n",
+    "                form ``./results``\n",
+    "            run_id (string): The name of an experiment. If ``None``, defaults to a random number.\n",
     "        \"\"\"\n",
+    "        self.output_dir = output_dir or './results'\n",
     "        self.run_id = run_id or str(int(time.time()))\n",
-    "        output_dir = os.path.join(\"./results\", self.run_id)\n",
-    "        if not os.path.exists(output_dir):\n",
-    "            os.makedirs(output_dir)\n",
-    "        self.output_file = open(os.path.join(output_dir, 'progress.txt'), 'w')\n",
+    "        self.output_dir = os.path.join(self.output_dir, self.run_id)\n",
+    "        if not os.path.exists(self.output_dir):\n",
+    "            os.makedirs(self.output_dir)\n",
+    "        self.output_file = open(os.path.join(self.output_dir, 'progress.txt'), 'w')\n",
     "        atexit.register(self.output_file.close)  # The file is automatically closed when the program exits\n",
-    "        \n",
-    "        self.writer = SummaryWriter(output_dir)\n",
+    "\n",
+    "        self.writer = SummaryWriter(self.output_dir)\n",
     "        self.first_row = True\n",
     "        self.epoch_dict = dict()\n",
-    "        \n",
+    "\n",
     "    def log(self, **kwargs):\n",
     "        \"\"\"Log diagnostics\"\"\"\n",
     "        for k, v in kwargs.items():\n",
@@ -53,7 +55,7 @@
     "                self.epoch_dict[k] = []\n",
     "            self.epoch_dict[k].append(v)\n",
     "            self.writer.add_scalar(k, v, len(self.epoch_dict[k]))\n",
-    "            \n",
+    "\n",
     "    def dump(self):\n",
     "        \"\"\"\n",
     "        Write all of the diagnostics to the ouput file.\n",
@@ -62,8 +64,7 @@
     "        self.output_file.write(\"\\t\".join(keys) + \"\\n\")\n",
     "        for row in zip(*vals):\n",
     "            self.output_file.write(\"\\t\".join(map(str, row)) + \"\\n\")\n",
-    "        self.output_file.flush()\n",
-    "            "
+    "        self.output_file.flush()\n"
    ]
   },
   {
@@ -71,9 +72,9 @@
    "id": "86902671",
    "metadata": {},
    "source": [
-    "The following code creates a directory of name `./results/test_run` and writes the logs at `progress.txt`, as well as the file for TensorBoard. One can check the current statistics in real-time by using TensorBoard:\n",
+    "The following code creates a directory of name `./results/test_run/{run_id}` and writes the logs at `progress.txt`, as well as the file for TensorBoard. One can check the current statistics in real-time by using TensorBoard:\n",
     "~~~\n",
-    "tensorboard --logdir ./results/{run_id}\n",
+    "tensorboard --logdir ./results/test_run/{run_id}\n",
     "~~~"
    ]
   },
@@ -84,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logger = EpochLogger(run_id='test_run')\n",
+    "logger = EpochLogger(output_dir='./results/test_run')\n",
     "for e in range(10):\n",
     "    logger.log(epoch=e, reward=10 * e)\n",
     "logger.dump()"
@@ -129,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
